@@ -1,5 +1,16 @@
 2006-02-02  Wim Taymans  <wim@fluendo.com>
 
+	* libs/gst/base/gstbasesink.c: (gst_base_sink_do_sync),
+	(gst_base_sink_render_object),
+	(gst_base_sink_queue_object_unlocked):
+	Only keep track of prerollable items when we are 
+	prerolling.
+	Before rendering after preroll, always check if we
+	have queued items.
+	Added some more debugging.
+
+2006-02-02  Wim Taymans  <wim@fluendo.com>
+
 	* gst/gstelement.c: (gst_element_continue_state),
 	(gst_element_set_state_func), (gst_element_change_state):
 	Fixed #326576, been running this for quite some time with
